@@ -43,6 +43,9 @@ PHP                                                                        NEWS
 - SQLite3:
   . Fixed bug #70571 (Memory leak in sqlite3_do_callback). (Adam)
 
+-SPL:
+  . Fixed bug #70573 (Cloning SplPriorityQueue leads to memory leaks). (Dmitry)
+
 - XMLRPC
   . Fixed bug #70526 (xmlrpc_set_type returns false on success). (Laruence)
 
